css/style.css
/* ... */
      .latest-news__tag {
        margin: 0 4px;
      }
  /* 6.5. Footer */
  footer {
    background-color: #262626;
    color: #868686;
    text-align: center;
  }

  footer .container {
    max-width: 1200px;
  }

  .footer__logo {
    margin-bottom: 5.4rem;
  }

  .footer__text {
    font-size: 15px;
    margin-bottom: 5rem;
  }

  .footer__separator {
    background-color: var(--main-gray);
  }

  .footer__bottom {
    text-align: initial;
    margin-top: 3.5rem;
  }

  .footer-links__title {
    color: #fff;
    font-size: 16px;
  }

  .footer-link__list {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  .footer-link__link {
    line-height: 2.2;
    font-size: 15px;
  }

  .footer-link__link:hover,
  .footer-link__link:focus,
  .footer-icons-list__item:hover,
  .footer-icons-list__item:focus {
    color: #ffffff;
  }

  .footer-icons-list__item:hover,
  .footer-icons-list__item:focus {
    text-decoration: none;
  }
  
  .footer__subscribe {
    margin-bottom: 2rem;
  }

  .footer__input {
    background-color: transparent;
    border: 1px solid var(--main-gray);
    padding: 0.7rem 1.3rem;
    color: #fff;
    border-right: none;
  }

  .footer__button {
    background-color: transparent;
    border: 1px solid var(--main-gray);
    padding: 0.7rem 1.1rem;
    color: #fff;
    margin-left: -3px;
  }

  .footer-icons-list__item {
    display: inline-block;
    border: 1px solid var(--main-gray);
    padding: 0.7rem 1.1rem;
    margin-right: 0.7rem;
  }

/* 7. Responsive - index.html (indicate Responsive in this form for each page) */
  /* 7.1 Min-width: 1200px */
  .test {position: fixed; top: 10px; left: 10px; color: tomato; z-index: 99999999;}

  @media only screen and (max-width: 1849.98px){
    .test::after  { content: '@media (max-width: 1850px)';}
    .header-top__navbar .navbar-nav {
      margin: 0 !important;
    }

    .buy-theme {
      border: 1px solid #1c1a19;
      border-radius: 5px;
      padding: 0.5rem 0.5rem;
      transition: .3s ease;
    }

    .buy-theme:hover,
    .buy-theme:focus {
      color: #ffffff;
      background-color: #000000;
      text-decoration: none;
    }
  }
  
  @media only screen and (min-width: 1200px){
    .test:after  { content: '@media (min-width: 1200px) >>>';} 
    
  }

  @media only screen and (max-width: 1199.98px){
      .test:after  { content: '@media (max-width: 1200px)';}   
      
  }

  @media only screen and (max-width: 991.98px){
      .test:after  { content: '@media (max-width: 992px)';}  
      
  }

  @media only screen and (max-width: 767.98px){
      .test:after  { content: '@media (max-width: 768px)';}  

  }

  @media only screen and (max-width: 575.98px){
      .test:after  { content: '@media (max-width: 576px)';}  

  }

  @media only screen  and (max-width: 480px) {
      .test:after  { content: '@media (max-width: 480px)';}  

  }

  @media only screen and (min-width: 320px) and (max-width: 400px) {
      .test:after { content: '@media min-width: 320px and @max-width: 400px)';}
      
  }

